--- a/public/survey.html
+++ b/public/survey.html
@@ -20,6 +20,16 @@
 </head>
 
 <body>
+
+  <style>
+    body {
+      font-family: 'Tulpen One', cursive;
+      font-size: 35px;
+      /* background-image: url('http://getwallpapers.com/wallpaper/full/1/2/e/277419.jpg') */
+      line-height: 1px;
+    }
+  
+  </style>
   <div class="container">
 
     <h2>Survey Questions</h2>
@@ -27,10 +37,10 @@
 
     <h3><strong>About You</strong></h3>
     <h4>Name (Required)</h4>
-    <input type="text" id="name" class="form-control" required>
+    <input type="text" id="name" style="font-family: 'Tulpen One', cursive; font-size: 35px; " class="form-control" required>
 
     <h4>Link to Photo Image (Required)</h4>
-    <input type="text" id="photo" class="form-control" required>
+    <input type="text" id="photo" style="font-family: 'Tulpen One', cursive; font-size: 35px;"  class="form-control" required>
 
     <hr>
 
